# Lab-works-BSU

./: .gitignore  README.md
lab 2/: README.md
lab 2/src/: Program.java
lab 2/src/Logic/: Cube.java  Pyramid.java  Sphere.java
lab 2/src/View/: MainView.java
lab 3/: README.md
lab 3/res/: data.xml  valid.xsd
lab 3/src/Logic/: Bag.java  Cube.java  Pyramid.java  Shape.java  ShapeType.java  Sphere.java
lab 3/src/View/: MainView.java
lab1/: CMakeLists.txt  README.md
lab1/controller/: controller.cpp  controller.h
lab1/model/: chaos.cpp  iter_line.cpp  iter_line.h  line.cpp  logic.cpp  node.cpp  node.h
lab1/module/: chaos.h  line.h  logic.h  man.cpp  man.h  queue.h  seller.cpp  seller.h
lab1/view/: main.cpp  painter.cpp  painter.h
